Criando a parte fantasma da página

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../image/D7.png" type="image/x-icon">
 
     <!-- links do css  -->
     <link rel="stylesheet" href="../css/style.css">
@@ -98,65 +99,111 @@
             </div>
 
         </div>
+
+        <!-- ================== parte do conteudo ============== -->
+
     </main>
 
     <main id="conteudo" class="artigo">
         <nav class="icons">
             <div class="icons-items">
-                <a href="#"><img src="../image/icon-grupos.png" alt="Grupos"></a>
+                <a href="#"><img class="img--grupos" src="../image/icon-grupos.png" alt="Grupos"></a>
                 <a href="#"><img src="../image/icons8-facebook-48.png" alt="Facebook"></a>
                 <a href="#"><img src="../image/icons8-instagram-48.png" alt="Instagram"></a>
                 <a href="#"><img
                         src="../image/icons8-social-news-aggregation,-web-content-rating,-and-discussion-website.-24.png"
                         alt=""></a>
+                <a href="#"><img src="../image/telegram.png" alt="Telegram"></a>
             </div>
         </nav>
 
         <article class="artigos--assuntos">
             <div class="assuntos--div">
-                <h4>lorem</h4>
-                <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea fugiat
-                    sit earum cumque
-                    aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque delectus
-                    quas soluta!</strong>
+                <div class="cabecalho">
+                    <h4>lorem</h4>
+                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                </div>
+                <div class="div--conteudo">
+                    <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
+                        fugiat
+                        sit earum cumque
+                        aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque
+                        delectus
+                        quas soluta!</strong>
+                    <img class="size" src="../image/Futuristic character wearing a dark cyberpunk hacker.png" alt="">
+                </div>
             </div>
 
             <div class="assuntos--div">
-                <h4>lorem</h4>
-                <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea fugiat
-                    sit earum cumque
-                    aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque delectus
-                    quas soluta!</strong>
+                <div class="cabecalho">
+                    <h4>lorem</h4>
+                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                </div>
+                <div class="div--conteudo">
+                    <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
+                        fugiat
+                        sit earum cumque
+                        aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque
+                        delectus
+                        quas soluta!</strong>
+                    <img class="size" src="../image/Futuristic character wearing a dark cyberpunk hacker.png" alt="">
+                </div>
             </div>
 
             <div class="assuntos--div">
-                <h4>lorem</h4>
-                <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea fugiat
-                    sit earum cumque
-                    aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque delectus
-                    quas soluta!</strong>
+                <div class="cabecalho">
+                    <h4>lorem</h4>
+                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                </div>
+                <div class="div--conteudo">
+                    <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
+                        fugiat
+                        sit earum cumque
+                        aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque
+                        delectus
+                        quas soluta!</strong>
+                    <img class="size" src="../image/Futuristic character wearing a dark cyberpunk hacker.png" alt="">
+                </div>
+            </div>
+
+            <div class="assuntos--div">
+                <div class="cabecalho">
+                    <h4>lorem</h4>
+                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                </div>
+                <div class="div--conteudo">
+                    <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
+                        fugiat
+                        sit earum cumque
+                        aspernatur inventore quam veritatis, nam ullam, aliquid officia ipsam consectetur hic atque
+                        delectus
+                        quas soluta!</strong>
+                    <img class="size" src="../image/Futuristic character wearing a dark cyberpunk hacker.png" alt="">
+                </div>
             </div>
         </article>
 
         <main id="main">
-            <div>
-                <span>Sites Dominion 7</span>
-                <div>
-                    <a href="#"><img src="../image/icon-grupos.png" alt="Grupos"></a>
+            <div class="div--sites--dominion">
+                <h5 class="titulo--sites">Sites Dominion 7</h5>
+                <div class="div--icons-items">
+                    <a href="#"><img class="img--grupos" src="../image/icon-grupos.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/hospedagem.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/pasta-de-musica.png" alt="Grupos"></a>
                 </div>
             </div>
 
-            <div>
-                <span>Rádio somaFM</span>
+            <div class="div--sites--dominion container-dominion">
+                <h5 class="titulo--sites">Rádio somaFM</h5>
                 <br>
-                <strong>Lorem ipsum dolor sit amet consectetur adipisicing elit. <a href="#">Dê uma olhada!</a></strong>
+                <strong>A maneira mais fácil de ouvir é com nosso player "pop-up" da web. Mas existem muitas outras
+                    maneiras de ouvir o SomaFM, os links de escuta estão abaixo. <a href="#">Dê uma
+                        olhada!</a></strong>
             </div>
 
-            <div>
-                <span>Sites Dominion 7</span>
-                <div>
+            <div class="div--sites--dominion">
+                <h5 class="titulo--sites">Sites Dominion 7</h5>
+                <div class="div--icons-items">
                     <a href="#"><img src="../image/pasta.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/hospedagem.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/pasta-de-musica.png" alt="Grupos"></a>
@@ -164,6 +211,15 @@
             </div>
         </main>
     </main>
+
+    <footer class="container-footer row">
+        <div class="div-footer row">
+            <img src="../image/D7.png" alt="Desing D7">
+            <p>&copy; 2024 Dominion 7 Comunicação, Aqui está os direitos reservados | <a href="#">D7 Políticas</a> | <a
+                    href="#">Informações.</a></p>
+            <img src="../image/D7.png" alt="Desing D7">
+        </div>
+    </footer>
 </body>
 
 </html>
