O site em processo de criação

--- a/pages/Fantasma.html
+++ b/pages/Fantasma.html
@@ -7,6 +7,7 @@
     <!-- ======== link ========= -->
     <link rel="stylesheet" href="../css/fantasma/base.css">
     <link rel="stylesheet" href="../css/fantasma/style.css">
+    <link rel="stylesheet" href="../css/fantasma/stren.css">
 
     <title>Operador Fantasma</title>
 </head>
@@ -14,7 +15,7 @@
 <body>
     <header class="container--header">
         <div class="container--div">
-            <h1>OPERADOR_FANTASMA</h1>
+            <h1>IRMANDADE_DAS_SOMBRAS</h1>
 
 
             <ul class="subNav">
@@ -25,6 +26,63 @@
             </ul>
         </div>
     </header>
+
+    <main id="conteudo" class="artigo">
+        <nav class="icons">
+            <div class="icons-items">
+                <div class="items-div"> <a href="#"><img class="size" src="../image/antena-parabolica.png"
+                            alt="antena-parabolica"></a></div>
+                <div class="items-div"> <a href="#"><img class="size" src="../image/www.png" alt="www"></a></div>
+                <div class="items-div"> <a href="#"><img class="size" src="../image/carta.png" alt="carta"></a></div>
+                <div class="items-div"><a href="#"><img class="size" src="../image/grampo.png" alt="grampo"></a></div>
+
+
+
+
+            </div>
+        </nav>
+
+        <article class="artigos--assuntos">
+
+            <div class="assuntos--div">
+                <h4>OPERADOR_FANTASMA</h4>
+                <strong>Bem-vindo! Operador. A Irmandade das sombras veio com um propósito de unir mentes brilhantes com
+                    uma visão compartilhada. Nosso objetivo é fomentar a colaboração e a criatividade em um ambiente
+                    onde a tecnologia e a inovação andam de mãos dadas.
+                    Nossa missão: ultrapassar os limites da tecnologia e do potencial humano. Por meio de código,
+                    Criatividade e colaboração, moldamos o futuro da fronteira digital.
+                    <a href="#">🔒 Cofre de dados </a></strong>
+            </div>
+
+            <div class="assuntos-div">
+                <div class="div--imagem">
+                    <img src="../image/Copia.jpg" alt="">
+                </div>
+                <div class="div--conteudo">
+                    <h4>SOMBRA_LÍDER</h4>
+                    <p class="estiloP"><strong>Codinome: </strong><span> O Fantasma</span></p>
+                    <p class="estiloP"><strong>Superpoderes: </strong> <span> Chefe de cozinha, eu ainda vou ter o
+                            meu
+                            restaurante!</span></p>
+                    <p class="estiloP"><strong>Especialização: </strong> Desenvolvedor FullStack | Arquitetura de
+                        Redes Neurais
+                        | Criptografia Quântica.</p>
+                    <p class="estiloP"><strong>Envolvido desde: </strong> A criação da Irmandade.</p>
+                    <p class="estiloP"><strong>Página web: </strong> Você já está nas sombras.</p>
+                    <p class="estiloP"><strong>Chave PGP: </strong><a id="link" href="#"> está aqui.</a></p>
+                </div>
+            </div>
+        </article>
+
+        <main id="main">
+            <ul class="navSub">
+                <li><a href="#">🧠 centro neural</a></li>
+                <li><a href="#">🔒 Cofre de dados</a></li>
+                <li><a href="#">⚛ link quântico</a></li>
+                <li><a href="#">💻 fórum cibernético</a></li>
+            </ul>
+        </main>
+    </main>
 </body>
 
 </html>
