--- a/pages/index.html
+++ b/pages/index.html
@@ -89,7 +89,7 @@
                 <br><br>
                 <span>A várias maneiras!</span>
                 <br><br>
-                <strong class="assunt">A <a class="link-a" href="../src/irmandade.html">Irmandade das sombras</a> quer
+                <strong class="assunt">A <a class="link-a" href="../pages/Fantasma.html">Irmandade das sombras</a> quer
                     ter um
                     impacto positivo, Trabalhar para causar um impacto positivo na vida dos membros e, potencialmente,
                     na
@@ -121,7 +121,7 @@
             <div class="assuntos--div">
                 <div class="cabecalho">
                     <h4>lorem</h4>
-                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                    <span class="span--cabecalho">Postado em 2024 Dez 22 00:28</span>
                 </div>
                 <div class="div--conteudo">
                     <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
@@ -137,7 +137,7 @@
             <div class="assuntos--div">
                 <div class="cabecalho">
                     <h4>lorem</h4>
-                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                    <span class="span--cabecalho">Postado em 2024 Dez 22 00:28</span>
                 </div>
                 <div class="div--conteudo">
                     <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
@@ -153,7 +153,7 @@
             <div class="assuntos--div">
                 <div class="cabecalho">
                     <h4>lorem</h4>
-                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                    <span class="span--cabecalho">Postado em 2024 Dez 22 00:28</span>
                 </div>
                 <div class="div--conteudo">
                     <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
@@ -169,7 +169,7 @@
             <div class="assuntos--div">
                 <div class="cabecalho">
                     <h4>lorem</h4>
-                    <span class="span--cabecalho">Postado em 21-12-2024</span>
+                    <span class="span--cabecalho">Postado em 2024 Dez 22 00:28</span>
                 </div>
                 <div class="div--conteudo">
                     <strong class="strong">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi alias ea
@@ -197,12 +197,13 @@
                 <h5 class="titulo--sites">Rádio somaFM</h5>
                 <br>
                 <strong>A maneira mais fácil de ouvir é com nosso player "pop-up" da web. Mas existem muitas outras
-                    maneiras de ouvir o SomaFM, os links de escuta estão abaixo. <a href="#">Dê uma
+                    maneiras de ouvir o SomaFM, os links de escuta estão abaixo. <a href="https://somafm.com/listen/">Dê
+                        uma
                         olhada!</a></strong>
             </div>
 
             <div class="div--sites--dominion">
-                <h5 class="titulo--sites">Sites Dominion 7</h5>
+                <h5 class="titulo--sites">Mídia Dominion 7</h5>
                 <div class="div--icons-items">
                     <a href="#"><img src="../image/pasta.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/hospedagem.png" alt="Grupos"></a>
