Em processo de criação

--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
 <body>
     <header class="container">
         <div id="div-container" class="container-div">
-            <h1>D<span>7</span></h1>
+            <h1>Dominion <span>7</span></h1>
 
             <nav class="container-nav">
                 <ul class="nav">
@@ -43,8 +43,8 @@
     </header>
 
     <div class="titulo">
-        <h2>Dominion 7</h2>
-        <p>// Onde os códigos fracos são quebrados</p>
+        <!-- <h2>Dominion 7</h2>
+        <p>// Onde os códigos fracos são quebrados</p> -->
     </div>
 
     <main class="container-main">
