--- a/pages/Fantasma.html
+++ b/pages/Fantasma.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../image/logoIrmandade.png" type="image/x-icon">
     <!-- ======== link ========= -->
     <link rel="stylesheet" href="../css/fantasma/base.css">
     <link rel="stylesheet" href="../css/fantasma/style.css">
