Em processo de criação

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <main class="container-main">
-        <div class="container-box">
+        <div class="container-box sumir">
             <div class="split">
                 <h3 class="top">Dominion 7</h3>
                 <strong class="assunt">O objetivo <a class="link-a" href="#">Dominion 7</a> é criar um espaço onde todos
@@ -62,14 +62,14 @@
 
         </div>
 
-        <div class="container-box">
+        <div class="container-box caixa-box">
             <div class="split">
                 <h3 class="color">Aproveitar-se</h3>
                 <strong class="assunt">Um tesouro de conhecimento para você aproveitar. Só o conhecimento
                     liberta!</strong>
                 <div class="servidor">
                     <img src="../image/hospedagem.png" alt="Servidor de mídia">
-                    <strong class="assunt"><a class="link-a" href="../src2/servidor.html">Servidor de mídia D7</a>.
+                    <strong class="assunt"><a class="link-a" href="../pages/servidor.html">Servidor de mídia D7</a>.
                         Discursos,
                         música, arte e muito mais!</strong>
                 </div>
@@ -82,7 +82,7 @@
 
         </div>
 
-        <div class="container-box">
+        <div class="container-box caixa-box">
             <div class="split const">
                 <h3 class="title">Participasse</h3>
                 <span>Quer participar?</span>
@@ -99,10 +99,8 @@
             </div>
 
         </div>
-
-        <!-- ================== parte do conteudo ============== -->
-
     </main>
+    <!-- ================== parte do conteudo ============== -->
 
     <main id="conteudo" class="artigo">
         <nav class="icons">
