--- a/pages/servidor.html
+++ b/pages/servidor.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../image/logoIrmandade.png" type="image/x-icon">
 
     <!-- link -->
     <link rel="stylesheet" href="../css/servidor/style.css">
@@ -27,7 +28,7 @@
     <div class="div-nav">
         <nav class="containerNav">
             <ul class="subNav">
-                <li><a href="">Início </a><span class="span">|</span></li>
+                <li><a href="../pages/index.html">Início </a><span class="span">|</span></li>
                 <li><a href="">Fóruns </a><span class="span">|</span></li>
                 <li><a href="">Grupos </a><span class="span">|</span></li>
                 <li><a href="">Perguntas frequentes </a><span class="span">|</span></li>
