--- a/pages/enigma.html
+++ b/pages/enigma.html
@@ -4,10 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/css/enigma.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Anton+SC&family=Bruno+Ace+SC&family=Geist+Mono:wght@100..900&family=Geo:ital@0;1&family=Iceland&family=Orbitron:wght@400..900&family=Oswald:wght@200..700&family=Permanent+Marker&family=Rubik+Wet+Paint&family=Turret+Road:wght@200;300;400;500;700;800&family=VT323&display=swap"
+        rel="stylesheet">
     <title>Enigma</title>
     <style>
         body {
             background-color: black;
+        }
+
+        h1,
+        p,
+        strong {
+            color: #fff;
         }
 
         pre {
@@ -21,21 +33,32 @@
 </head>
 
 <body>
-    <pre>
-___   ____  ____   _  _  _     ___   _   _  ____  _  _  ____ 
-|  \ | ___||  __| | || || |   | __ \| |_| || ___|| || ||  __|
-|   \| __| | |__  | || || |  | |__||  _  || __| | || || |__  
-| |\ || ___||  __| | || || |  | ___|| |_| || ___|| || ||  __|
-| | \ || __| | |   | || || |__| |    |   || __| | || || |    
-|_| \_||____||_|    \_______/|_|    |_|_||____| \_____||_|   
-
-|/ \ / ||  __| |  __|| || || ||  __| |  __|| || || |\ | 
-|  <   | |__  | |__  | || || | |__   | |__  | || ||  \| 
-|\ \  /||  __| |  __|| || || |  __|  |  __| | || || |\ \ 
-|/  \/ || |    | |   | || || | |__   | |    | || || | \ | 
-|_|\__||_|    |_|    \_______||____| |_|    \_____||_|  |_|
-
+    <div class="container">
+        <h1>Bem-vindo à jornada, peregrino. Que a epifania caia sobre você.</h1>
+        <pre>
+        ███╗   ██╗██████╗ ███╗   ███╗ █████╗ ███╗   ██╗██████╗ ███████╗    ███████╗██╗  ██╗ ██████╗ ███╗   ███╗███████╗
+        ████╗  ██║██╔══██╗████╗ ████║██╔══██╗████╗  ██║██╔══██╗██╔════╝    ██╔════╝██║  ██║██╔═══██╗████╗ ████║██╔════╝
+        ██╔██╗ ██║██████╔╝██╔████╔██║███████║██╔██╗ ██║██║  ██║███████╗    ███████╗███████║██║   ██║██╔████╔██║█████╗  
+        ██║╚██╗██║██╔═══╝ ██║╚██╔╝██║██╔══██║██║╚██╗██║██║  ██║╚════██║    ╚════██║██╔══██║██║   ██║██║╚██╔╝██║██╔══╝  
+        ██║ ╚████║██║     ██║ ╚═╝ ██║██║  ██║██║ ╚████║██████╔╝███████║    ███████║██║  ██║╚██████╔╝██║ ╚═╝ ██║███████╗
+        ╚═╝  ╚═══╝╚═╝     ╚═╝     ╚═╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝ ╚══════╝    ╚══════╝╚═╝  ╚═╝ ╚═════╝ ╚═╝     ╚═╝╚══════╝   
     </pre>
+        <strong>Três guardiões estão diante de você. Cada um guarda parte do segredo.
+            Para passar, deve resolver os enigmas e reunir os fragmentos.
+            O caminho final leva à Irmandade das Sombras. </strong>
+
+        <nav>
+            <ul>
+                <li><a href="../pages/guaridiao.html">[1] Guardião do Silêncio</a></li>
+                <li><a href="../pages/caos.html">[2] Guardião do Caos</a></li>
+                <li><a href="../pages/tempo.html">[3] Guardião do Tempo</a></li>
+            </ul>
+        </nav>
+
+        <p>Cada guardião tem um enigma. Resolva-os na ordem correta para desvendar o código final.</p>
+        <p>Combine os fragmentos: Com esse link abaixo.</p>
+        <p>Link: irmandadedassombras.com</p>
+    </div>
 </body>
 
 </html>
