--- a/pages/Fantasma.html
+++ b/pages/Fantasma.html
@@ -52,7 +52,7 @@
                     onde a tecnologia e a inovação andam de mãos dadas.
                     Nossa missão: ultrapassar os limites da tecnologia e do potencial humano. Por meio de código,
                     Criatividade e colaboração, moldamos o futuro da fronteira digital.
-                    <a href="#">🔒 Cofre de dados </a></strong>
+                    <a href="../pages/enigma.html"> Começe a sua jornada aqui...</a></strong>
             </div>
 
             <div class="assuntos-div">
