--- a/pages/index.html
+++ b/pages/index.html
@@ -186,7 +186,7 @@
                 <h5 class="titulo--sites">Sites Dominion 7</h5>
                 <div class="div--icons-items">
                     <a href="#"><img class="img--grupos" src="../image/icon-grupos.png" alt="Grupos"></a>
-                    <a href="#"><img src="../image/hospedagem.png" alt="Grupos"></a>
+                    <a href="../pages/servidor.html"><img src="../image/hospedagem.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/pasta-de-musica.png" alt="Grupos"></a>
                 </div>
             </div>
@@ -204,7 +204,7 @@
                 <h5 class="titulo--sites">Mídia Dominion 7</h5>
                 <div class="div--icons-items">
                     <a href="#"><img src="../image/pasta.png" alt="Grupos"></a>
-                    <a href="#"><img src="../image/hospedagem.png" alt="Grupos"></a>
+                    <a href="../pages/servidor.html"><img src="../image/hospedagem.png" alt="Grupos"></a>
                     <a href="#"><img src="../image/pasta-de-musica.png" alt="Grupos"></a>
                 </div>
             </div>
