Processo de criação

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../image/D7.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../image/logoIrmandade.png" type="image/x-icon">
 
     <!-- links do css  -->
     <link rel="stylesheet" href="../css/style.css">
@@ -51,11 +51,12 @@
         <div class="container-box sumir">
             <div class="split">
                 <h3 class="top">Dominion 7</h3>
-                <strong class="assunt">O objetivo <a class="link-a" href="#">Dominion 7</a> é criar um espaço onde todos
+                <strong class="assunt">O objetivo <a class="link-a" href="../pages/D7/servidoD7.html">Dominion 7</a> é
+                    criar um espaço onde todos
                     possam aprender e crescer, independentemente do nível de experiência. Juntos, compartilhamos
                     conhecimento,
                     colaboramos em projetos de código aberto e incentivamos a inovação. <a class="link-a"
-                        href="#">Confira
+                        href="../pages/D7/avisos.html">Confira
                         aqui!</a>
                 </strong>
             </div>
@@ -69,7 +70,8 @@
                     liberta!</strong>
                 <div class="servidor">
                     <img src="../image/hospedagem.png" alt="Servidor de mídia">
-                    <strong class="assunt"><a class="link-a" href="../pages/servidor.html">Servidor de mídia D7</a>.
+                    <strong class="assunt"><a class="link-a" href="../pages/servidor.html">Servidor de mídia
+                            irmandade</a>.
                         Discursos,
                         música, arte e muito mais!</strong>
                 </div>
