--- a/pages/src/music/misic_03.html
+++ b/pages/src/music/misic_03.html
@@ -7,22 +7,21 @@
     <link rel="shortcut icon" href="../image/logoIrmandade.png" type="image/x-icon">
 
     <!-- link -->
-    <link rel="stylesheet" href="../css/servidor/style.css">
-    <link rel="stylesheet" href="../css/servidor/base.css">
+    <link rel="stylesheet" href="../../../css/servidor/style.css">
+    <link rel="stylesheet" href="../../../css/projetos/musica_01.css">
 
     <!-- Font google -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel=" preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Anton+SC&family=Bruno+Ace+SC&family=Geist+Mono:wght@100..900&family=Geo:ital@0;1&family=Iceland&family=Orbitron:wght@400..900&family=Oswald:wght@200..700&family=Permanent+Marker&family=Rubik+Wet+Paint&family=VT323&display=swap"
         rel="stylesheet">
-    <title>Servidor</title>
+    <title>A musica é o ritmo do seu corpo</title>
 </head>
 
 <body>
     <header class="container">
-        <h1>Dominion 7</h1>
-        <h2>Servidor de mídia</h2>
+        <h1>Servidor de mídia</h1>
     </header>
 
     <div class="div-nav">
@@ -38,9 +37,8 @@
     </div>
 
     <div class="div-container">
-        <img class="logo" src="../image/logoIrmandade.png" alt="">
-        <p>"Unimos a tecnologia à ética para iluminar o caminho do progresso, protegendo o presente e moldando o
-            futuro."</p>
+        <img class="logo" src="../../../image/logoIrmandade.png" alt="">
+        <p>"No escuro da tecnologia, a Irmandade das Sombras ilumina o caminho para a inovação."</p>
     </div>
 
     <div class="partePrincipal">
@@ -52,25 +50,52 @@
             <table>
                 <tbody>
                     <tr class="const">
-                        <td colspan="2" class="link"><a href="../pages/src/projeto_01.html"
-                                title="Arquivos">PROJETO_01/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Arquivos">Diretório pia</a></td>
                         <td class="size">-</td>
-                        <td class="date">2025 Jan 27 23:59</td>
+                        <td class="date">-</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="../pages/src/projeto_02.html"
-                                title="Musicas">PROJETO_02/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Musicas">D7 Musica - Because I Love You</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 28 00:59</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="../pages/src/projeto_03.html"
-                                title="Artes">PROJETO_03/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Artes">D7 Musica - Happy Nation</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 29 01:18</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">PROJETO_04/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
@@ -83,12 +108,12 @@
 
     <footer class="container-footer row">
         <div class="div-footer row">
-            <img class="imagem" src="../image/logoIrmandade.png" alt="Logo da irmandade">
+            <img class="imagem" src="../../../image/logoIrmandade.png" alt="Logo da irmandade">
             <p>&copy; 2024 D7 Comunicação. <a href="#">início</a> | <a href="#">Fóruns</a> | <a href="#">Grupos</a> | <a
                     href="#">Perguntas frequentes</a> | <a href="#">linkedin</a> | <a href="#">Discord</a> | <a
                     href="#">.onion</a>
             </p>
-            <img class="imagem" src="../image/logoIrmandade.png" alt="Logo da irmandade">
+            <img class="imagem" src="../../../image/logoIrmandade.png" alt="Logo da irmandade">
         </div>
     </footer>
 </body>
