--- a/pages/D7/servidoD7.html
+++ b/pages/D7/servidoD7.html
@@ -90,12 +90,12 @@
     </table>
     <footer class="container-footer row">
         <div class="div-footer row">
-            <img class="imagem" src="../imagens/D7.png" alt="Desing D7">
+            <img class="imagem" src="../../image/D7.png" alt="Desing D7">
             <p>&copy; 2024 D7 Comunicação. <a href="#">início</a> | <a href="#">Fóruns</a> | <a href="#">Grupos</a> | <a
                     href="#">Perguntas frequentes</a> | <a href="#">linkedin</a> | <a href="#">Discord</a> | <a
                     href="#">.onion</a>
             </p>
-            <img class="imagem" src="../imagens/D7.png" alt="Desing D7">
+            <img class="imagem" src="../../image/D7.png" alt="Desing D7">
         </div>
     </footer>
 
