Criando ideias para o site

--- a/pages/79 32 102 97 110 116 97 115 109 97.html
+++ b/pages/79 32 102 97 110 116 97 115 109 97.html
@@ -21,19 +21,68 @@
         </div>
     </header>
 
+
+<main class="main--principal">
+
+    <nav class="icons">
+        <div class="icons-items">
+            <div class="items-div"> <a href="#"><img class="size" src="../image/antena-parabolica.png"
+                        alt="antena-parabolica"></a></div>
+            <div class="items-div"> <a href="#"><img class="size" src="../image/www.png" alt="www"></a></div>
+            <div class="items-div"> <a href="#"><img class="size" src="../image/carta.png" alt="carta"></a></div>
+            <div class="items-div"><a href="#"><img class="size" src="../image/grampo.png" alt="grampo"></a></div>
+
+
+
+
+        </div>
+    </nav>
+
+   <article>
     <div class="container--perfil">
-       <div class="div-perfil">
-        <img class="foto" src="../image/Copia.jpg" alt="Foto do fantasma">
-        <div class="div-text">
-            <strong>Bem-vindo! Que vista em.</strong>
-            <p>Para entrar em contato comigo, envia um <br>e-mail para o ofantasma@email.com ou irmandadeSombra@email.com.</p>
-            <span>Última atulização foi em 22 fev 2022.</span>
+        <div class="div-perfil">
+            <img class="foto" src="../image/IMG_20221021_224935_330.jpg" alt="Foto do fantasma">
+            <div class="div-text">
+                <strong>Bem-vindo! Que vista em.</strong>
+                <p>Para entrar em contato comigo, envia um <br>e-mail para o ofantasma@email.com ou irmandadeSombra@email.com.</p>
+                <span>Última atulização foi em 22 fev 2022.</span>
+            </div>
+        </div>
+        </div>
+
+        <div class="informacao">
+            <p>Abaixo está uma lista "oficial" de onde tenho contas. Futuramente algumas pessoas vão usar o nome de "O Fantasma", então eu tenho outra conta pra quando isso acontecer "The fantasma". Além disso, Em caso de dúvida sobre uma das minhas contas, verifique aqui.</p>
+            <p>Eu uso o LinkedIn <a href="#">Meu linkedin</a> para manter um currículo online básico. Eu passei á não me importar do que falam de mim ou quando me perguntam, eu gosto de ter certeza que conheco você ou pessoalmente antes de aceitar o convite.</p>
+            <p>Últimamente estou tentando não usar o fecabook, e quando uso, é apenas uns 10 minutos, mas se você tiver interesse ver a minha conta pessoal do facebook está aqui. <a href="#">O meu facebook</a></p>
+        </div>
+   </article>
+
+   <main id="main">
+    <div class="div--sites--dominion">
+        <h5 class="titulo--sites">Sites Dominion 7</h5>
+        <div class="div--icons-items">
+            <a href="#"><img class="img--grupos" src="../image/icon-grupos.png" alt="Grupos"></a>
+            <a href="../pages/servidor.html"><img  class="img--grupo" src="../image/hospedagem.png" alt="Grupos"></a>
+            <a href="#"><img  class="img--grupo" src="../image/pasta-de-musica.png" alt="Musica"></a>
         </div>
     </div>
-</div>
 
-<div class="informacao">
-    <p>Abaixo está uma lista "oficial" de onde tenho contas. Futuramente algumas pessoas vão usar o nome de "O Fantasma", então eu tenho outra conta para quando isso acontecer "sombraLider@gmail.com". Além disso, Em caso de dúvida sobre uma das minhas contas, verifique aqui.</p>
-</div>
+    <div class="div--sites--dominion container-dominion">
+        <h5 class="titulo--sites">Rádio somaFM</h5>
+        <br>
+    <strong>A maneira mais fácil de ouvir é com nosso player "pop-up" da web. Mas existem muitas outras maneiras de ouvir o SomaFM, os links de escuta estão abaixo. <a href="https://somafm.com/listen/">Dê uma olhada!</a></strong>
+    </div>
+
+    <div class="div--sites--dominion">
+        <h5 class="titulo--sites">Mídia Dominion 7</h5>
+        <div class="div--icons-items">
+            <a href="#"><img class="img--grupo" src="../image/pasta.png" alt="Grupos"></a>
+            <a href="../pages/servidor.html"><img class="img--grupo" src="../image/hospedagem.png" alt="Grupos"></a>
+            <a href="#"><img class="img--grupo" src="../image/pasta-de-musica.png" alt="Grupos"></a>
+        </div>
+    </div>
+</main>
+
+</main>
 </body>
 </html>
