--- a/pages/Fantasma.html
+++ b/pages/Fantasma.html
@@ -73,6 +73,44 @@
                     <p class="estiloP"><strong>Chave PGP: </strong><a id="link" href="#"> está aqui.</a></p>
                 </div>
             </div>
+
+            <div class="assuntos-div">
+                <div class="div--imagem">
+                    <img src="../image/capanga.jpg" alt="">
+                </div>
+                <div class="div--conteudo">
+                    <h4>SOMBRA_LÍDER</h4>
+                    <p class="estiloP"><strong>Codinome: </strong><span> O Fantasma</span></p>
+                    <p class="estiloP"><strong>Superpoderes: </strong> <span> Chefe de cozinha, eu ainda vou ter o
+                            meu
+                            restaurante!</span></p>
+                    <p class="estiloP"><strong>Especialização: </strong> Desenvolvedor FullStack | Arquitetura de
+                        Redes Neurais
+                        | Criptografia Quântica.</p>
+                    <p class="estiloP"><strong>Envolvido desde: </strong> A criação da Irmandade.</p>
+                    <p class="estiloP"><strong>Página web: </strong> Você já está nas sombras.</p>
+                    <p class="estiloP"><strong>Chave PGP: </strong><a id="link" href="#"> está aqui.</a></p>
+                </div>
+            </div>
+
+            <div class="assuntos-div">
+                <div class="div--imagem">
+                    <img src="../image/capanga.jpg" alt="">
+                </div>
+                <div class="div--conteudo">
+                    <h4>SOMBRA_LÍDER</h4>
+                    <p class="estiloP"><strong>Codinome: </strong><span> O Fantasma</span></p>
+                    <p class="estiloP"><strong>Superpoderes: </strong> <span> Chefe de cozinha, eu ainda vou ter o
+                            meu
+                            restaurante!</span></p>
+                    <p class="estiloP"><strong>Especialização: </strong> Desenvolvedor FullStack | Arquitetura de
+                        Redes Neurais
+                        | Criptografia Quântica.</p>
+                    <p class="estiloP"><strong>Envolvido desde: </strong> A criação da Irmandade.</p>
+                    <p class="estiloP"><strong>Página web: </strong> Você já está nas sombras.</p>
+                    <p class="estiloP"><strong>Chave PGP: </strong><a id="link" href="#"> está aqui.</a></p>
+                </div>
+            </div>
         </article>
 
         <main id="main">
