--- a/pages/Fantasma.html
+++ b/pages/Fantasma.html
@@ -79,17 +79,11 @@
                     <img src="../image/capanga.jpg" alt="">
                 </div>
                 <div class="div--conteudo">
-                    <h4>SOMBRA_LÍDER</h4>
-                    <p class="estiloP"><strong>Codinome: </strong><span> O Fantasma</span></p>
-                    <p class="estiloP"><strong>Superpoderes: </strong> <span> Chefe de cozinha, eu ainda vou ter o
-                            meu
-                            restaurante!</span></p>
-                    <p class="estiloP"><strong>Especialização: </strong> Desenvolvedor FullStack | Arquitetura de
-                        Redes Neurais
-                        | Criptografia Quântica.</p>
-                    <p class="estiloP"><strong>Envolvido desde: </strong> A criação da Irmandade.</p>
-                    <p class="estiloP"><strong>Página web: </strong> Você já está nas sombras.</p>
-                    <p class="estiloP"><strong>Chave PGP: </strong><a id="link" href="#"> está aqui.</a></p>
+                    <h4>CONSELHEIRO_DAS_SOMBRAS</h4>
+                    <p class="estiloP"><strong>Codinome: </strong><span>O rapaz dos olhos brancos</span></p>
+                    <p class="estiloP"><strong>Superpoderes: </strong> <span>Um olhar mistérioso além daquilo que você imagina.</span></p>
+                    <p class="estiloP"><strong>Especialização: </strong> O braço direito do líder, que oferece conselhos estratégicos.</p>
+                    <p class="estiloP"><strong>Página web: </strong> Está aqui!</p>
                 </div>
             </div>
 
@@ -98,17 +92,11 @@
                     <img src="../image/capanga.jpg" alt="">
                 </div>
                 <div class="div--conteudo">
-                    <h4>SOMBRA_LÍDER</h4>
-                    <p class="estiloP"><strong>Codinome: </strong><span> O Fantasma</span></p>
-                    <p class="estiloP"><strong>Superpoderes: </strong> <span> Chefe de cozinha, eu ainda vou ter o
-                            meu
-                            restaurante!</span></p>
-                    <p class="estiloP"><strong>Especialização: </strong> Desenvolvedor FullStack | Arquitetura de
-                        Redes Neurais
-                        | Criptografia Quântica.</p>
-                    <p class="estiloP"><strong>Envolvido desde: </strong> A criação da Irmandade.</p>
-                    <p class="estiloP"><strong>Página web: </strong> Você já está nas sombras.</p>
-                    <p class="estiloP"><strong>Chave PGP: </strong><a id="link" href="#"> está aqui.</a></p>
+                    <h4>ESPIÃO_DAS_TREVAS</h4>
+                    <p class="estiloP"><strong>Codinome: </strong><span>O Espião</span></p>
+                    <p class="estiloP"><strong>Superpoderes: </strong> <span> Especialista em infiltração e coleta de informações</span></p>
+                    <p class="estiloP"><strong>Envolvido desde: </strong> Os projetos.</p>
+                    <p class="estiloP"><strong>Página web: </strong> Confira aqui!</p>
                 </div>
             </div>
         </article>
